--- a/views/user/wishList.ejs
+++ b/views/user/wishList.ejs
@@ -139,7 +139,7 @@
 									<tr>
 										<th scope="row" class="px-3"><%=index+1 %></th>
 										<td class="px-3"><img src="<%= item.product.variants[0].imageUrls[0] %>" alt="img" width="100" height="100"></td>
-										<td class="px-3">$<%=item.product.price %></td>
+										<td class="px-3">₹<%=item.product.price %></td>
 										<td class="px-3">inStock</td>
 										<td class="px-3">
 											<!-- <form action="/addToCartFromWishlist" method="post">
