--- a/views/user/checkout.ejs
+++ b/views/user/checkout.ejs
@@ -102,7 +102,8 @@
                                            <!-- logic default address here pending -->
                                            
                                             <h2 class="w-100"><%=(index===0)?'Default Address':'' %></h2>
-                                            <input type="radio" name="address" value="<%=address?._id  %>">
+                                            <input type="radio" name="address" value="<%= address?._id %>" <%= (index === 0) ? 'checked' : '' %>>
+
                                         </div>
                                         <input class="py-2 px-2 mt-2" readonly value="<%=address?.username  %>" type="text" placeholder="username">
                                         <input class="py-2 px-2 mt-2" readonly value="<%=address?.phone  %>" type="text" placeholder="phone">
