--- a/views/user/orderHistory.ejs
+++ b/views/user/orderHistory.ejs
@@ -120,49 +120,49 @@
 
 	<!--================Table Box Area =================-->
 	<section class="login_box_area section_gap">
-		<div class="container">
-			<div class="row">
-				<div class="col-lg-12 border table-responsive">
-					<form action="/checkOutStatus" method="post">
-					<table class="table w-100 h-100">
-						<thead>
-						  <tr>
-							<th scope="col">No.</th>
-							<th scope="col">Product Name</th>
-							<th scope="col">Status</th>
-							<th scope="col">Purchased Date</th>
-							<th scope="col">Product Size</th>
-							<th scope="col">Quantity</th>
-							<th scope="col">Amount</th>
-							<th scope="col"><input type="search" id="search_input_table" class="form-control" placeholder="Search"></th>
-							<th scope="col">
-								<button class="btn btn-danger mx-auto" type="submit"><%=(checkOut[0]?.orderStatus==="Processing")?'Cancel':"Rebuy" %></button>
-							</th>
-						  </tr>
-						</thead>
+		 <div class="container">
+      <div class="row" style="overflow: auto; height: 700px;">
+       
+		<% if(checkOut){ %>
+			<% checkOut.forEach((details,index)=>{ %>
+				<% details.cart.items.forEach((item,index)=>{ %>
+				<div class="card mx-auto shadow rounded-4 m-3 p-3 border   row flex-column" style="width: 680px;height: 370px;">
 					
-						<tbody id="table-body">
-							<!-- loop -->
-							<% checkOut.forEach(function(data,index){ %>
-							  <tr>
-								  <th scope="row"><%=index+1 %></th>
-								  <td><%=data.productDetails[0].name %></td>
-								  <td><%=data.orderStatus%></td>
-								  <td><%=new Date(data.updatedAt).toLocaleDateString('en-US')%></td>
-								  <td><%=data.cart.items.variant.size%>uk</td>
-								  <td><%=data.cart.items.quantity%>uk</td>
-								  <td>$<%=data.cart.totalAmount%></td>
-								  <input type="hidden" name="orderStatus" value="<%=(data.orderStatus==="Processing")?"Cancelled":"Processing" %>">
-								  <!-- <td><button class="btn btn-danger" onclick="removeRow(this)">Remove</button></td> -->
-								</tr>
-							<%  })%>
-						  </tbody>
-					
-					  </table>
-					</form>
-				</div>
-			</div>
-		</div>
+
+
+					<div class="col-4 h-100">
+						<% 
+						const variant = item.product.variants.find(variant => variant?.color === item.variant?.color);
+						if (variant && variant.imageUrls && variant.imageUrls.length > 0) {
+						%>
+							<img class="img-fluid mt-4 rounded-3" src="<%= variant?.imageUrls[0] %>" class="card-img-top" alt="Product Image">
+						<% } else { %>
+							<img class="img-fluid mt-4 rounded-3" src="" class="card-img-top" alt="No Image Available">
+						<% } %>
+					</div>
+
+
+
+
+
+				   <div class="col-12">
+					<div class="card-body" style="line-height: 1.3;width: 400px;">
+						<h5 class="card-title"><b><%=item.product.name%></b></h5>
+						<p class="card-title">Payment Method: <b><%=details?.paymentMethod%></b> </p>
+						<p class="card-text">quantity:<b><%=item?.quantity%></b></p>
+						<p class="card-text">Discount: ₹0</p>
+						<p class="card-text"><b>Total: ₹ <%=details.cart?.totalAmount%></b> </p>
+						<p class="card-text"><b>Status :  <%=details.orderStatus%>  </b> </p>
+						<a href="/orderhistory/details/<%=encodeURIComponent(details._id)%>" class="btn btn-primary mt-2" style="padding: 0.500em 10em;">Invoice</a>
+					  </div>
+				   </div>
+				  </div>
+				<% }) %>
+		<%  })%>
+		<%  }%>
+        
+      </div>
+   </div>
 	</section>
 	<!--================End Table Box Area =================-->
 
